<resources>
    <string name="app_name">Teddy bear</string>
    <string name="version_info">V%1$s - Build %2$d</string>
    <string name="demo_title_ocr_tts">OCR_TTS demo</string>
    <string name="demo_title_scene">Scene demo</string>
    <string name="demo_title_monitor_mode_start">Start Monitor Mode</string>
    <string name="demo_title_monitor_mode_stop">Stop Monitor Mode</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_enroll_speaker">Enroll speaker</string>
    <string name="menu_item_reread">Reread</string>
    <string name="menu_item_chat_robot">Chat bot</string>
    <string name="menu_item_voice_assist">Voice assist</string>
    <string name="menu_item_ocr_tts">OCR</string>
    <string name="menu_item_ocr_tts_settings">OCR_TTS settings</string>
    <string name="menu_item_scene_settings">Scene settings</string>
    <string name="select_image_title">Select an image to analyze:</string>
    <string name="take_photo">Take a Photo</string>
    <string name="select_image_in_album">From Gallery</string>
    <string name="select_image_error">Can\'t load the selected image, please try again.</string>
    <string name="tts_demo_test">This is a test content, please select an image to analyze.</string>
    <string name="tts_start">Start</string>
    <string name="tts_pause">Pause</string>
    <string name="tts_stop">Stop</string>
    <string name="translate_btn">Translate</string>
    <string name="translate_title">Destination language:</string>
    <string name="state_analyze_image">Start to analyze the selected image&#8230;</string>
    <string name="state_analyze_translate">Start to translate content&#8230;</string>
    <string name="state_analyze_translate_error">Translation is failed, please try again&#8230;</string>
    <string name="state_analyze_voice">Start to generate voice&#8230;</string>
    <string name="state_analyze_content_empty">Content is empty, please try again&#8230;</string>
    <string name="state_analyze_voice_error">Can\'t generate voice, please try again&#8230;</string>
    <string name="state_analyze_language_not_support">The language(%1$s) doesn\'t support to speech now.</string>
    <string name="state_analyze_sync_settings_start">Start to sync settings from Parent\'s side&#8230;</string>
    <string name="state_analyze_sync_settings_success">Sync success!</string>
    <string name="state_analyze_sync_settings_fail">Sync fail: %1$s</string>
    <string name="ocr_to_speak_cannot_found_story">Can\'t found a story, please add a story first.</string>
    <string name="preference_voice_title">Voice options</string>
    <string name="preference_translate_title">Translate options</string>
    <string name="preference_parent_control_title">Parent control</string>
    <string name="preference_voice_language_title">Language region</string>
    <string name="preference_voice_language_summary">Please select a language region</string>
    <string name="preference_voice_language_default_value">en-US</string>
    <string name="preference_google_voice_language_default_value">en_US</string>
    <string name="preference_voice_gender_title">Voice gender</string>
    <string name="preference_voice_gender_summary">Please select a voice gender</string>
    <string name="preference_voice_gender_default_value">1</string>
    <string name="preference_translator_title">Translator</string>
    <string name="preference_translator_summary">Please select a translator</string>
    <string name="preference_translator_default_value">0</string>
    <string name="translator_baidu">0</string>
    <string name="translator_google">1</string>
    <string name="translator_microsoft">2</string>
    <string name="preference_translate_enabler_title">Translate</string>
    <string name="preference_translate_language_title">Translate language</string>
    <string name="preference_translate_language_summary">Please select a translate language</string>
    <string name="preference_translate_language_default_value">en</string>
    <string name="btn_title_command">Speaking</string>
    <string name="btn_title_command_teddy">Hello\nTeddy</string>
    <string name="btn_title_command_alexa">Hey\nAlexa</string>
    <string name="btn_title_command_google">Okay\nGoogle</string>
    <string name="btn_title_command_baidu">小度\n你好</string>
    <string name="btn_title_new_message">New\nmessage</string>
    <string name="btn_title_monitor_mode">Monitor mode\nstop</string>
    <string name="btn_title_wifi_direct_mode">Wifi\ndirect</string>
    <string name="scene_title_format">Scene: %1$s</string>
    <string name="scene_mic_is_on">Please start speaking.</string>
    <string name="stt_in_initial">Initializing STT client, please wait for a moment&#8230;</string>
    <string name="stt_in_initial_cn">正在初始化语音转文字服务,请稍候.</string>
    <string name="speaker_recognition_sample_text">My voice is my passport verify me</string>
    <string name="speaker_recognition_sample_text_tips">Notice: Read the phrase above to enroll your voice.
        \nThe audio file should be at least 0 seconds long and no longer than 15 seconds.
    Each person has only one ID and each ID must be recorded 3 times at least.</string>
    <string name="btn_title_start_recording">Start recording</string>
    <string name="btn_title_stop_recording">Stop recording</string>
    <string name="btn_start_record_touch_down">Press to start record</string>
    <string name="btn_start_record_touch_up">Release stop record</string>
    <string name="btn_create_profile">Create Profile</string>
    <string name="btn_get_all_profile">Get Profile</string>
    <string name="btn_reset_profile">Reset Profile</string>
    <string name="btn_delete_profile">Delete Profile</string>
    <string name="msg_dont_modify_the_file">Please don\'t modify this file.</string>
    <string name="msg_cant_connect_ftp_server">Can\'t connect the FTP server.</string>
    <string name="msg_sn_invalid">The serial number is invalid.</string>
    <string name="msg_ftp_sync_fail">Failed to upload the OCR_TTS settings</string>
    <string name="msg_ftp_download_fail">Failed to download OCR_TTS settings</string>
    <string name="reread_status_pls_start_speaking">Please speaking!</string>
    <string name="reread_status_recording">Recording</string>
    <string name="reread_status_playing">Playing</string>
    <string name="reread_status_tips">Hold button to speak!</string>
    <string name="preference_speaking_language_title">Speaking language</string>
    <string name="preference_speaking_language_summary">Please select a speaking language</string>
    <string name="preference_speaking_language_default_value">en-US</string>
    <string name="preference_recognition_language_title">Recognition language</string>
    <string name="preference_recognition_language_summary">Please select a recognition language</string>
    <string name="preference_recognition_language_default_value">en-US</string>
    <string name="preference_server_ip_address_title">Server address</string>
    <string name="preference_server_ip_address_summary">Please type server address which need to connect</string>
    <string name="preference_server_ip_address_default_value">192.168.191.1</string>
    <string name="preference_server_domain_title">Domain</string>
    <string name="preference_server_domain_summary">(Nullable) Please type the domain</string>
    <string name="preference_server_domain_default_value"></string>
    <string name="preference_server_username_title">User name</string>
    <string name="preference_server_username_summary">Please type the user name</string>
    <string name="preference_server_username_default_value">Aaron</string>
    <string name="preference_server_password_title">Password</string>
    <string name="preference_server_password_summary">Please type the password</string>
    <string name="preference_server_password_default_value">1</string>
    <string name="preference_server_password_format">\u25CF</string>
    <string name="preference_monitor_mode_time_title">Monitor mode warning frequency(mins)</string>
    <string name="preference_monitor_mode_time_summary">Please set Monitor mode warning frequency</string>
    <string name="preference_monitor_mode_time_default_value">30</string>
    <string name="preference_monitor_mode_noise_title">Monitor Mode Noise Setting(dB)</string>
    <string name="preference_monitor_mode_noise_summary">Please set Monitor Mode Noise Setting</string>
    <string name="preference_monitor_mode_noise_default_value">50</string>
    <string name="preference_ftp_server_ip_address_default_value">mhdqftp.wistron.com.tw</string>
    <string name="preference_ftp_server_port_title">Port</string>
    <string name="preference_ftp_server_port_summary">Please type the port</string>
    <string name="preference_ftp_server_port_default_value">21</string>
    <string name="preference_ftp_server_username_default_value">M-Polluxro</string>
    <string name="preference_ftp_server_password_default_value">kv97drti</string>
    <string name="luis_assistant_cmd_empty">\n\nI can\'t understand what you want to do, please try again.</string>
    <string name="luis_assistant_cmd_empty_cn">\n\n我不理解你想要做什么,请重试.</string>
    <string name="luis_assistant_cmd_empty_repeat">\n\nSorry, please try again.&#160;</string>
    <string name="luis_assistant_cmd_empty_repeat_cn">\n\n抱歉,请再说一遍.&#160;</string>
    <string name="luis_assistant_cmd_google_stt_error7">Sorry, I didn\'t catch that, please come that again.</string>
    <string name="luis_assistant_cmd_google_stt_error7_cn">抱歉, 我没听清楚你说什么, 请再说一次.</string>
    <string name="luis_assistant_alarm_success">Succeed in setting the alarm, %1$s</string>
    <string name="luis_assistant_alarm_success_cn">闹钟. %1$s. 设置成功.</string>
    <string name="luis_assistant_alarm_fail">Fail to set the alarm, %1$s</string>
    <string name="luis_assistant_alarm_fail_cn">闹钟. %1$s. 设置失败.</string>
    <string name="luis_assistant_function_not_support">Sorry, the function does not support for now.</string>
    <string name="luis_assistant_function_not_support_cn">抱歉, 目前不支持此功能.</string>
    <string name="luis_assistant_music_can_not_found">Can\'t find the music.</string>
    <string name="luis_assistant_music_can_not_found_cn">找不到对应的歌曲.</string>
    <string name="luis_assistant_music_not_start">Please play music first.</string>
    <string name="luis_assistant_music_not_start_cn">请先播放一首歌曲.</string>
    <string name="luis_assistant_weather_city_is_empty">The city name can\'t be empty, please try again.</string>
    <string name="luis_assistant_weather_city_is_empty_cn">城市不能为空, 请重试.</string>
    <string name="luis_assistant_weather_can_not_found_city">Can\'t recognize the city. %1$s. please try again.</string>
    <string name="luis_assistant_weather_can_not_found_city_cn">不能识别此城市. %1$s. 请重试.</string>
    <string name="luis_assistant_weather_can_not_get_conditions">Can\'t obtain the weather data. please try again.</string>
    <string name="luis_assistant_weather_can_not_get_conditions_cn">未能查询到天气. 请重试.</string>
    <string name="luis_assistant_weather_to_read_future_three_days">%1$s\'s weather in %2$s is. %3$s. The high temperature is. %4$s celsius. the low temperature is. %5$s celsius.</string>
    <string name="luis_assistant_weather_to_read_future_three_days_cn">%1$s %2$s 的天气是. %3$s. 最高温度. %4$s 摄氏度. 最低温度. %5$s 摄氏度.</string>
    <string name="luis_assistant_weather_to_read_fixed_day">The weather of %1$s. %2$s is. %3$s. The high temperature is. %4$s celsius. the low temperature is. %5$s celsius.</string>
    <string name="luis_assistant_weather_to_read_fixed_day_cn">%2$s. %1$s. 的天气是. %3$s. 最高温度. %4$s 摄氏度. 最低温度. %5$s 摄氏度.</string>
    <string name="luis_assistant_weather_to_read_weekend_first">This weekend\'s weather in %1$s.</string>
    <string name="menu_face_recognition_enable">Enable face recognition</string>
    <string name="menu_face_recognition_settings">Face recognition settings</string>
</resources>