<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/scene_menu_item_enroll_speaker"
        android:title="@string/menu_item_enroll_speaker"
        android:visible="false"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/scene_menu_item_reread"
        android:title="@string/menu_item_reread"
        android:visible="false"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/scene_menu_item_chat_robot"
        android:title="@string/menu_item_chat_robot"
        android:visible="false"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/scene_menu_item_voice_assist"
        android:title="@string/menu_item_voice_assist"
        android:visible="false"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/scene_menu_settings"
        android:title="@string/menu_item_scene_settings"
        android:visible="false"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/scene_menu_item_ocr_tts"
        android:title="@string/menu_item_ocr_tts"
        android:visible="false"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/scene_menu_item_server_settings"
        android:title="@string/menu_item_settings"
        android:visible="false"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/scene_menu_item_face_recognition_settings"
        android:title="@string/menu_face_recognition_settings"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/scene_menu_item_face_recognition_check"
        android:title="@string/menu_face_recognition_enable"
        app:showAsAction="never"></item>
</menu>
