<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.wistron.demo.tool.teddybear.scene.EnrollSpeaker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enroll_speaker_btn_start_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_title_start_recording" />

        <Button
            android:id="@+id/enroll_speaker_btn_stop_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_title_stop_recording"
            android:enabled="false" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speaker_recognition_sample_text"
        android:background="@drawable/list_selector_background_focused"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speaker_recognition_sample_text_tips" />

    <TextView
        android:id="@+id/enroll_speaker_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/list_selector_background_focused" />

</LinearLayout>
