<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".scene.useless.MainActivity">

    <Button
        android:id="@+id/demo_item_ocr_tts"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:text="@string/demo_title_ocr_tts" />

    <Button
        android:id="@+id/demo_item_scene"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_below="@id/demo_item_ocr_tts"
        android:text="@string/demo_title_scene" />

    <Button
        android:id="@+id/start_monitor_mode"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_below="@id/demo_item_scene"
        android:text="@string/demo_title_monitor_mode_start" />

    <include
        layout="@layout/version_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>
